syntax = "proto3";

package roleypoly.platform;
option go_package = "github.com/roleypoly/rpc/platform";

import "shared/shared.proto";
import "discord/discord.proto";
import "google/protobuf/empty.proto";

service Platform {
  rpc EnumerateMyGuilds(google.protobuf.Empty) returns (GuildEnumeration) {}
  rpc GetGuildSlug(roleypoly.IDQuery) returns (roleypoly.Guild) {}
  rpc GetGuild(roleypoly.IDQuery) returns (PresentableGuild) {}

  rpc UpdateMyRoles(UpdateRoles) returns (google.protobuf.Empty) {}
  rpc UpdateGuildData(GuildData) returns (google.protobuf.Empty) {}
}

message GuildEnumeration { repeated PresentableGuild guilds = 1; }

message PresentableGuild {
  string ID = 1;
  roleypoly.Guild guild = 2;
  GuildData data = 3;
  roleypoly.discord.Member member = 4;
  roleypoly.GuildRoles roles = 5;
}

message GuildData {
  string ID = 1;
  string message = 2;
  repeated Category categories = 3;
  repeated string entitlements = 4;
}

message UpdateRoles {
  string guildID = 1;
  Roles roles = 2;
}

message Roles { repeated string roles = 1; }

message Category {
  string ID = 1;
  string name = 2;
  repeated string roles = 3;
  bool hidden = 4;
  CategoryType type = 5;
  int32 position = 6;

  enum CategoryType {
    multi = 0;
    single = 1;
  }
}

message UpdateEntitlement {
  roleypoly.IDQuery query = 1;
  string name = 2;
  bool state = 3;
}